--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
         }
     ],
     "cSpell.words": [
+        "abackward",
+        "adaptivecruisecontrol",
+        "aforward",
         "autoload",
         "autopark",
         "Bezier",
@@ -19,7 +22,10 @@
         "imgtype",
         "imshow",
         "iterrows",
+        "lblinker",
         "MOSSE",
+        "overspeed",
+        "OVERSPEED",
         "padx",
         "pady",
         "pyautogui",
@@ -30,6 +36,7 @@
         "sonner",
         "SOUNDPACK",
         "SOUNDPACKS",
+        "Tumppi",
         "uids",
         "ultralytics",
         "visualisation",
